Sticky header covering headers fix and overflow text fix

--- a/style/main.css
+++ b/style/main.css
@@ -34,6 +34,13 @@ h6 {
     font-weight: bold;
 }
 
+#opening-hours-section,
+#our-cars-section,
+#delivery-section,
+#closed-dates-container {
+    scroll-margin-top: 5rem;
+}
+
 table.open-hours-table,
 table.closed-dates-table,
 table.our-cars-table,
@@ -100,7 +107,7 @@ body {
         width: 100dvw;
         max-width: 100%;
         height: 4rem;
-        max-height: 10dvh;
+        max-height: max-content;
 
         padding-left: 2ch;
         padding-right: 2ch;
@@ -119,6 +126,7 @@ body {
 
             font-family: var(--header-font);
         }
+
         &>nav {
             display: flex;
             flex-flow: row nowrap;
